// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleSearchToolbar /> should render when [canCreate=false] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[Function]}
    placeholder="Sample name"
    value="foo"
  />
</Toolbar>
`;

exports[`<SampleSearchToolbar /> should render when [canCreate=true] 1`] = `
<Toolbar>
  <SearchInput
    onChange={[Function]}
    placeholder="Sample name"
    value="foo"
  />
  <LinkButton
    color="blue"
    tip="Create"
    tipPlacement="top"
    to="/samples/create"
  >
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="plus-square fa-fw"
    />
  </LinkButton>
</Toolbar>
`;
